Use overflow:hidden for ContentPanes w/a single layout child, to avoid safari bugs.
Fixes #9449 !strict.

git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@20079 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -841,6 +841,15 @@ body .dijitAlignClient { position: absolute; }
 	display: block;
 	overflow: auto;	/* if we don't have this (or overflow:hidden), then Widget.resizeTo() doesn't make sense for ContentPane */
 }
+
+.dijitContentPaneSingleChild {
+	/*
+	 * if the ContentPane holds a single layout widget child which is being sized to match the content pane,
+	 * then the ContentPane should never get a scrollbar (but it does due to browser bugs, see #9449
+	 */
+	overflow: hidden;
+}
+
 /* TitlePane */
 .dijitTitlePane {
 	display: block;
